# Baseline-setup-Waveshare-SKU-25948

./: .gitignore  CMakeLists.txt  README.md  capture_log.py  sdkconfig  sdkconfig.defaults
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  gui.c  gui.h  idf_component.yml  lvgl_port.c  lvgl_port.h  main.c  time_service.c  time_service.h  vehicle_store.c  vehicle_store.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/fonts/: lv_font_montserrat_52_liters.c
main/screens/: setup_screen.c  setup_screen.h  wifi_screen.c  wifi_screen.h
